# benchmark_llm_test

./: .gitignore  config.example.json  llm_bench.html  llm_bench.json  llm_bench.py  models.py  ollama_multi_bench.example.json  ollama_multi_bench.py  pyproject.toml  readme.md  requirements.txt
core/: lifecycle.py  orchestrator.py  readiness.py
core/benchmark/: ollama.py  openai.py
data/: __init__.py  html_report.py  mailer.py
src/llm_bench/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  models.py
src/llm_bench/clients/: __init__.py  ollama_client.py  openai_errors.py  vllm_client.py
src/llm_bench/core/: __init__.py  _context.py  entrance.py  lifecycle.py  orchestrator.py  readiness.py
src/llm_bench/core/benchmark/: __init__.py  ollama.py  openai.py
src/llm_bench/data/: config.py  excel_report.py  html_report.py  mailer.py  probe.py  report_writer.py
src/llm_bench/domain/: __init__.py  config.py  enums.py  results.py
src/llm_bench/utils/: __init__.py  cli_runner.py  format.py  http.py  time_utils.py  tokens.py
tests/: test_config_loading.py  test_enums.py  test_excel_report.py  test_format.py  test_lifecycle.py  test_ollama_helpers.py  test_orchestrator_helpers.py  test_time_utils.py  test_tokens.py
utils/: cli_runner.py  http.py
