[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_bench"
version = "0.2.0"
description = "Olares sequential LLM benchmark (Ollama + vLLM/llama.cpp)"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Olares team" },
]
keywords = ["llm", "benchmark", "ollama", "vllm", "olares"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
llm-bench = "llm_bench.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
# `importmode = "importlib"` avoids the historical conftest-path tricks:
# pytest then resolves test modules via importlib without prepending the
# project root onto sys.path. This matters in this repo because the root
# directory holds the legacy `llm_bench.py` shim (kept for cron
# compatibility), which would otherwise shadow the `src/llm_bench/`
# package and break collection. With `pythonpath = ["src"]` below we
# expose only the package directory to imports, which is exactly what we
# want.
addopts = ["-ra", "--strict-markers", "--strict-config", "--import-mode=importlib"]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (we use this intentionally)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
explicit_package_bases = true
mypy_path = "src"
